# insight-notebooks

./: .gitignore  Makefile  inventory_VBB.xml  pyproject.toml  seisglitch-config.yaml  seisglitch.sh
insight/catalog/: __init__.py  catalog.py
insight/rotate/: __init__.py  polarisation.py  rotate.py
insight/util/: __init__.py  download.py  metrics.py
notebooks/: S0173a.ipynb  S1222a.ipynb  data_prep.ipynb  multiple.ipynb  multiple_prf.ipynb  polarisation.ipynb  prf_comparison.ipynb  single.ipynb
notebooks/.ipynb_checkpoints/: single-checkpoint.ipynb
prs/: environment.yml  test.ipynb  test2.ipynb
seisglitch/: detect.py
