[tool.poetry]
name = "insight-notebooks"
version = "0.1.0"
description = ""
authors = ["Tom Taylor <tom@tom.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
obspy = "^1.4.0"
pandas = "~2.1"
#pandas = "^1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
pyarrow = "^13.0.0"
requests = "^2.31.0"
jupyter = "^1.0.0"
python-seispy = "^1.3.4"
#numpy = "<1.22.0"
scipy = ">1.0"
#pyraysum = { file = "build/pyraysum-1.1.0.macosx-11.1-arm64.tar.gz" }
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
